--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1,16 +1,24 @@
-# You can find more information about this file on the symfony website:
-# http://www.symfony-project.org/reference/1_4/en/10-Routing
+job:
+  class:   sfPropelRouteCollection
+  options: { model: JobeetJob }
 
-# default rules
+job_show_user:
+  url:     /job/:company_slug/:location_slug/:id/:position_slug
+  class:   sfPropelRoute
+  options: { model: JobeetJob, type: object }
+  param:   { module: job, action: show }
+  allow_empty: true
+  requirements:
+    id: \d+
+    sf_method: [get]
+
 homepage:
   url:   /
-  param: { module: default, action: index }
+  param: { module: job, action: index }
 
-# generic rules
-# please, remove them by adding more specific rules
-default_index:
-  url:   /:module
-  param: { action: index }
-
-default:
-  url:   /:module/:action/*
+#default_index:
+#  url:   /:module
+#  param: { action: index }
+#
+#default:
+#  url:   /:module/:action/*
