--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -5,9 +5,11 @@ job:
 job_show_user:
   url:     /job/:company_slug/:location_slug/:id/:position_slug
   class:   sfPropelRoute
-  options: { model: JobeetJob, type: object }
+  options:
+    model: JobeetJob
+    type:  object
+    method_for_criteria: doSelectActive
   param:   { module: job, action: show }
-  allow_empty: true
   requirements:
     id: \d+
     sf_method: [get]
