--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -6,18 +6,24 @@ category:
 
 job:
   class:   sfPropelRouteCollection
-  options: { model: JobeetJob }
+  options:
+    model:          JobeetJob
+    column:         token
+    object_actions: { publish: put }
+  requirements:
+    token: \w+
 
 job_show_user:
-  url:     /job/:company_slug/:location_slug/:id/:position_slug
+  url:     /job/:token
   class:   sfPropelRoute
   options:
     model: JobeetJob
     type:  object
     method_for_criteria: doSelectActive
+    column: token
   param:   { module: job, action: show }
   requirements:
-    id: \d+
+    token: \w+
     sf_method: [get]
 
 homepage:
