--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1,3 +1,18 @@
+affiliate:
+  class:   sfPropelRouteCollection
+  options:
+    model: JobeetAffiliate
+#    actions: [new, create, index]
+    object_actions: { wait: get }
+
+api_jobs:
+  url:     /api/:token/jobs.:sf_format
+  class:   sfPropelRoute
+  param:   { module: api, action: list }
+  options: { model: JobeetJob, type: list, method: getForToken }
+  requirements:
+    sf_format: (?:xml|json|yaml)
+
 category:
   url:      /category/:slug
   class:    sfPropelRoute
