--- a/config/databases.yml
+++ b/config/databases.yml
@@ -1,32 +1,24 @@
-# You can find more information about this file on the symfony website:
-# http://www.symfony-project.org/reference/1_4/en/07-Databases
-
 dev:
   propel:
     param:
-      classname:  DebugPDO
-      debug:
-        realmemoryusage: true
-        details:
-          time:       { enabled: true }
-          slow:       { enabled: true, threshold: 0.1 }
-          mem:        { enabled: true }
-          mempeak:    { enabled: true }
-          memdelta:   { enabled: true }
-
+      classname: DebugPDO
+      debug: { realmemoryusage: true, details: { time: { enabled: true }, slow: { enabled: true, threshold: 0.1 }, mem: { enabled: true }, mempeak: { enabled: true }, memdelta: { enabled: true } } }
 test:
   propel:
+    class: sfPropelDatabase
     param:
-      classname:  DebugPDO
-
+      classname: DebugPDO
+      dsn: 'mysql:host=localhost;dbname=jobeet_test'
+      username: root
+      password: null
 all:
   propel:
-    class:        sfPropelDatabase
+    class: sfPropelDatabase
     param:
-      classname:  PropelPDO
-      dsn:        mysql:dbname=jobeetdocs;host=localhost
-      username:   root
-      password:   
-      encoding:   utf8
+      classname: PropelPDO
+      dsn: 'mysql:dbname=jobeetdocs;host=localhost'
+      username: root
+      password: null
+      encoding: utf8
       persistent: true
-      pooling:    true
+      pooling: true
